# shake-configure

./: LICENSE  README.md  shake-configure.cabal
Shake/: Configure.hs
Shake/Configure/: Finder.hs  Package.hs  PkgConfig.hs
